2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.

2014-01-15 Jeff Johnson <john3209@msu.edu>

 * Made changes Homework 1 entailed us to do. (Send HTTP 1.0 Response)

2014-01-22 Jeff Johnson <john3209@msu.edu>

 * Made fixes to Homework 1. - Updated \n to \r\n